<resources>
    <string name="app_name">بقالة</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="Gmail_web_client_id">467496904796-qnkcblf9s7tia25bmrgp50ed9a0uqfnf.apps.googleusercontent.com</string>

    <string-array name="productstypes">
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Meats</item>
        <item>Electronics</item>
    </string-array>

</resources>